[gd_scene load_steps=15 format=3 uid="uid://dp20462n1a82a"]

[ext_resource type="Texture2D" uid="uid://dxkyl8jkex46m" path="res://assets/sprites/slime_green.png" id="1_5ku88"]
[ext_resource type="Script" uid="uid://iku63pmfaijs" path="res://scripts/green_slime.gd" id="1_7ayma"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0pvn7"]
atlas = ExtResource("1_5ku88")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q1e0"]
atlas = ExtResource("1_5ku88")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_boo2g"]
atlas = ExtResource("1_5ku88")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq38r"]
atlas = ExtResource("1_5ku88")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4qxf"]
atlas = ExtResource("1_5ku88")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_82nss"]
atlas = ExtResource("1_5ku88")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_feqdm"]
atlas = ExtResource("1_5ku88")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxnjh"]
atlas = ExtResource("1_5ku88")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_lg5eu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pvn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q1e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boo2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq38r")
}],
"loop": true,
"name": &"death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4qxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82nss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feqdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxnjh")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pvn7"]
size = Vector2(16, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ctys7"]
size = Vector2(14, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4q1e0"]
size = Vector2(3, 9)

[node name="GreenSlime" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_7ayma")

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_lg5eu")
animation = &"death"
autoplay = "default"

[node name="PisotonArea" type="Area2D" parent="." groups=["enemigos", "manolo"]]

[node name="manolo" type="CollisionShape2D" parent="PisotonArea" groups=["enemigos", "manolo"]]
position = Vector2(0, -13.75)
shape = SubResource("RectangleShape2D_0pvn7")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(8, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-8, 0)

[node name="ZonaMuerte" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonaMuerte"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_ctys7")

[node name="CollisionShapeIzq" type="CollisionShape2D" parent="ZonaMuerte"]
position = Vector2(-7, -6)
shape = SubResource("RectangleShape2D_4q1e0")

[node name="CollisionShapeDe" type="CollisionShape2D" parent="ZonaMuerte"]
position = Vector2(7, -6)
shape = SubResource("RectangleShape2D_4q1e0")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="PisotonArea" to="." method="_on_pisoton_area_area_entered"]
[connection signal="body_entered" from="ZonaMuerte" to="." method="_on_zona_muerte_body_entered"]
